generating models (good, provider, supply chain, rating) & adding Heroku config

--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "name": "coffee-print",
-  "private": true,
-  "dependencies": {}
+  
+  "cacheDirectories": ["frontend/node_modules","node_modules"]
 }
