--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,9 @@
     "@ember/jquery": "^0.6.0",
     "@ember/optional-features": "^0.7.0",
     "broccoli-asset-rev": "^3.0.0",
+    "bulma": "^0.5.3",
     "ember-ajax": "^5.0.0",
+    "ember-bulma": "^0.4.3",
     "ember-cli": "~3.12.0",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.7.3",
@@ -31,7 +33,7 @@
     "ember-cli-htmlbars-inline-precompile": "^2.1.0",
     "ember-cli-inject-live-reload": "^1.8.2",
     "ember-cli-rails-addon": "^0.10.0",
-    "ember-cli-sass": "^10.0.0",
+    "ember-cli-sass": "^6.2.0",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^2.1.0",
@@ -53,5 +55,6 @@
   },
   "engines": {
     "node": "8.* || >= 10.*"
-  }
+  },
+  "dependencies": {}
 }
