--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,9 +21,7 @@
     "@ember/jquery": "^0.6.0",
     "@ember/optional-features": "^0.7.0",
     "broccoli-asset-rev": "^3.0.0",
-    "bulma": "^0.5.3",
     "ember-ajax": "^5.0.0",
-    "ember-bulma": "^0.4.3",
     "ember-cli": "~3.12.0",
     "ember-cli-app-version": "^3.2.0",
     "ember-cli-babel": "^7.7.3",
@@ -56,5 +54,7 @@
   "engines": {
     "node": "8.* || >= 10.*"
   },
-  "dependencies": {}
+  "dependencies": {
+    "bulma": "^0.7.5"
+  }
 }
